# ffreis-workflows-rust

./: AGENTS.md  Makefile  README.md  lefthook.yml
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  devops-automation.yml  devops-pr-hygiene.yml  devops-pr-labeler.yml  devops-security.yml  rust-bench.yml  rust-build.yml  rust-container.yml  rust-coverage.yml  rust-deny.yml  rust-docs.yml  rust-fmt.yml  rust-lint.yml  rust-miri.yml  rust-msrv.yml  rust-mutation.yml  rust-security.yml  rust-semgrep.yml  rust-sonar.yml  rust-test.yml  self-test.yml
examples/hello/: Cargo.toml  Containerfile  Dockerfile  deny.toml  sonar-project.properties
examples/hello/benches/: bench_validator.rs
examples/hello/src/: lib.rs  main.rs
examples/hello/tests/: integration.rs
scripts/hooks/: check_commit_msg.sh
