[package]
name = "hello"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Hello world example for platform workflow self-testing"

[[bin]]
name = "hello"
path = "src/main.rs"

[lib]
name = "hello"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_validator"
harness = false
